--- a/index.css
+++ b/index.css
@@ -8,17 +8,17 @@ h1 {
 h2 {
     text-align: center;
     font-family: 'Alegreya Sans', sans-serif;
-    font-size: 35px;
+    font-size: 30px;
 }
 
 h3 {
   font-family: 'Alegreya Sans', sans-serif;
-  font-size: 25px;
+  font-size: 20px;
 }
 
 h4 {
   font-family: 'Alegreya Sans', sans-serif;
-  font-size: 20px;
+  font-size: 15px;
 }
 
 body {
@@ -30,30 +30,116 @@ nav {
   font-family: 'Alegreya Sans', sans-serif;
 }
 
+tel {
+  color: #CC5500;
+}
+
 
 .fa-plane {
-  color: #e65c00;
+  color: #CC5500;
+  opacity: 0.3;
 }
 
 .fa-anchor {
-  color: #e65c00;
+  color: #CC5500;
+  opacity: 0.3;
 }
 
 .fa-subway {
-  color: #e65c00;
+  color: #CC5500;
+  opacity: 0.3;
 }
 
-a:link {
-  color: rgba(0, 0, 0, 0.5);
+.fa-cocktail {
+  color: #CC5500;
+  opacity: 0.3;
 }
+
+.fa-hotdog{
+  color: #CC5500;
+  opacity: 0.3;
+}
+
+.fa-heart {
+  color: #CC5500;
+  opacity: 0.3;
+}
+
+.fa-map-pin {
+  color: #CC5500;
+  opacity: 0.3;
+}
+
+.fa-female   {
+  color: #CC5500;
+  opacity: 0.3;
+}
+
+.fa-clock   {
+  color: #CC5500;
+  opacity: 0.3;
+}
+
+.fa-music   {
+  color: #CC5500;
+  opacity: 0.3;
+}
+
+
+  a:link {
+    color: #CC5500;
+  }
 
 /* visited link */
-a:visited {
-  color: #e65c00;
+:visited {
+  color: #CC5500;
 }
 
 /* mouse over link */
 a:hover {
-  color: inherit;
+  color: #A9A9A9;
   text-decoration: none;
+}
+
+
+
+
+
+/* Style inputs with type="text", select elements and textareas */
+input[type=text], select, textarea {
+  width: 100%; /* Full width */
+  padding: 12px; /* Some padding */
+  border: 1px solid #ccc; /* Gray border */
+  border-radius: 4px; /* Rounded borders */
+  box-sizing: border-box; /* Make sure that padding and width stays in place */
+  margin-top: 6px; /* Add a top margin */
+  margin-bottom: 16px; /* Bottom margin */
+  resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+}
+
+/* Style the submit button with a specific background color etc */
+input[type=submit] {
+  background-color: #CC5500;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+/* When moving the mouse over the submit button, add a darker green color */
+input[type=submit]:hover {
+  background-color: #e65c02;
+}
+
+/* Add a background color and some padding around the form */
+.contact {
+  text-align: left;
+  position: center;
+  max-width: 500px;
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 10px;
+  margin-right: auto;
+  margin-left: auto;
 }
