--- a/index.css
+++ b/index.css
@@ -36,53 +36,53 @@ tel {
 
 
 .fa-plane {
-  color: #CC5500;
-  opacity: 0.3;
+  color: #E0E0E0;
+  opacity: 0.7;
 }
 
 .fa-anchor {
-  color: #CC5500;
-  opacity: 0.3;
+  color: #E0E0E0;
+  opacity: 0.7;
 }
 
 .fa-subway {
-  color: #CC5500;
-  opacity: 0.3;
+  color: #E0E0E0;
+  opacity: 0.7;
 }
 
 .fa-cocktail {
-  color: #CC5500;
-  opacity: 0.3;
+  color: #E0E0E0;
+  opacity: 0.7;
 }
 
 .fa-hotdog{
-  color: #CC5500;
-  opacity: 0.3;
+  color: #E0E0E0;
+  opacity: 0.7;
 }
 
 .fa-heart {
-  color: #CC5500;
-  opacity: 0.3;
+  color: #E0E0E0;
+  opacity: 0.7;
 }
 
 .fa-map-pin {
-  color: #CC5500;
-  opacity: 0.3;
+  color: #E0E0E0;
+  opacity: 0.7;
 }
 
 .fa-female   {
-  color: #CC5500;
-  opacity: 0.3;
+  color: #E0E0E0;
+  opacity: 0.7;
 }
 
 .fa-clock   {
-  color: #CC5500;
-  opacity: 0.3;
+  color: #E0E0E0;
+  opacity: 0.7;
 }
 
 .fa-music   {
-  color: #CC5500;
-  opacity: 0.3;
+  color: #E0E0E0;
+  opacity: 0.7;
 }
 
 
@@ -101,45 +101,13 @@ a:hover {
   text-decoration: none;
 }
 
-
-
-
-
-/* Style inputs with type="text", select elements and textareas */
-input[type=text], select, textarea {
-  width: 100%; /* Full width */
-  padding: 12px; /* Some padding */
-  border: 1px solid #ccc; /* Gray border */
-  border-radius: 4px; /* Rounded borders */
-  box-sizing: border-box; /* Make sure that padding and width stays in place */
-  margin-top: 6px; /* Add a top margin */
-  margin-bottom: 16px; /* Bottom margin */
-  resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
-}
-
-/* Style the submit button with a specific background color etc */
-input[type=submit] {
-  background-color: #CC5500;
-  color: white;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-/* When moving the mouse over the submit button, add a darker green color */
-input[type=submit]:hover {
-  background-color: #e65c02;
-}
-
-/* Add a background color and some padding around the form */
-.contact {
-  text-align: left;
-  position: center;
-  max-width: 500px;
-  border-radius: 5px;
-  background-color: #f2f2f2;
-  padding: 10px;
-  margin-right: auto;
-  margin-left: auto;
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: white;
+  text-align: center;
+  text-align: center;
+  font-family: 'Alegreya Sans', sans-serif;
 }
