--- a/index.css
+++ b/index.css
@@ -36,52 +36,52 @@ tel {
 
 
 .fa-plane {
-  color: #E0E0E0;
+  color: #dcdcdc;
   opacity: 0.7;
 }
 
 .fa-anchor {
-  color: #E0E0E0;
+  color: #dcdcdc;
   opacity: 0.7;
 }
 
 .fa-subway {
-  color: #E0E0E0;
+  color: #dcdcdc;
   opacity: 0.7;
 }
 
 .fa-cocktail {
-  color: #E0E0E0;
+  color: #dcdcdc;
   opacity: 0.7;
 }
 
 .fa-hotdog{
-  color: #E0E0E0;
+  color: #dcdcdc;
   opacity: 0.7;
 }
 
 .fa-heart {
-  color: #E0E0E0;
+  color: #dcdcdc;
   opacity: 0.7;
 }
 
 .fa-map-pin {
-  color: #E0E0E0;
+  color: #dcdcdc;
   opacity: 0.7;
 }
 
 .fa-female   {
-  color: #E0E0E0;
+  color: #dcdcdc;
   opacity: 0.7;
 }
 
 .fa-clock   {
-  color: #E0E0E0;
+  color: #dcdcdc;
   opacity: 0.7;
 }
 
 .fa-music   {
-  color: #E0E0E0;
+  color: #dcdcdc;
   opacity: 0.7;
 }
 
