--- a/index.css
+++ b/index.css
@@ -25,6 +25,7 @@ body {
     text-align: center;
     font-size: 18px;
     font-family: 'Alegreya Sans', sans-serif;
+    color: #505050;
 }
 
 nav {
