--- a/index.css
+++ b/index.css
@@ -26,6 +26,7 @@ body {
     font-size: 18px;
     font-family: 'Alegreya Sans', sans-serif;
     color: #505050;
+    font-weight: bold;
 }
 
 nav {
